# A.R.C.-Web-Scraper

./: .gitignore  README.md  pyproject.toml
arc/: __init__.py  __main__.py  cli.py  output.py  scraper.py  types.py
scripts/: live_smoke_test.py
tests/: conftest.py  test_cli.py  test_integration.py  test_output.py  test_scraper.py  test_types.py
tests/fixtures/: chapter_page.html  error_404.html  last_chapter_page.html  rss_feed.xml  series_page.html
