[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-web-novel-scraper"
version = "0.1.0"
description = "A.R.C. — Automated Retrieval of Chapters"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
